#42 Contact form issue on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3367,6 +3367,10 @@ Pirate Forms
 	min-height: 100px;
 }
 
+.pirate_forms_wrap .form_field_wrap label{
+	float: left;
+}
+
 /* -------------------------------------------------------------------
 Widgets
 ------------------------------------------------------------------- */
